5-objects/_objects.grid.scss
/*==================================================
=            GRID-BASED LAYOUT ELEMENTS            =
==================================================*/


/* ===== PROPERTIES ========================================================= */



$block-margin-horizontal:              $base-margin;
$block-mobile-large-margin-horizontal: $block-margin-horizontal / 1.66;
$block-mobile-margin-horizontal:       $block-margin-horizontal / 2;

$block-margin-vertical:              $base-margin * 1.2;
$block-mobile-large-margin-vertical: $block-margin-vertical / 1.25;
$block-mobile-margin-vertical:       $block-margin-vertical / 1.5;





/* ===== SECTORS ============================================================ */


// To divide page into independent sectors.
.sector,
.sector-container {
    @include clearfix();

    // Adds highlight
    &.highlighted {
        display: block;
        background-color: $block-highlight-colour;
    }

    // Adds line separator to the end of the sector
    &.separated {
        display: block;
        border-bottom: $delim-border;
    }

    // Empty sector, hide it's visibility
    &.blank {
        &.separated { border: none; }
        &.highlighted { background: none; }
    }
}


// The only way to cover horizontal separator of the previous block is to shift
// current block slightly upwards and re-draw it with separator of the
// background colour.
.separated + .separated.no-lines {
    position:   relative; top: -1 * $base-border-width;
    border:     none;
    border-top: $base-border-width solid $base-bg-colour;
}


//.layout-rebase {} // Layout normaliser => Reset previous layouting rules





/* ===== BLOCKS ============================================================= */


// Standard block container
.block {
    display: block;
    padding: $block-margin-vertical $block-margin-horizontal;
    //    vertical-align: top;  used when `display: block` is converted into `display: table`

    // 1. Collapse space in all siblings (default)...
    .sector + .sector & { padding-top: 0; }

    // 2. Enable in some cases
    .sector + .sector.highlighted & {
        padding-top: $block-margin-vertical;

        @include breakpoint( $mobile ) {
            padding-top: $block-mobile-margin-vertical;
        }

        @include breakpoint( $mobile-large ) {
            padding-top: $block-mobile-large-margin-vertical;
        }
    }

    .sector.highlighted + .sector &,
    .sector.separated + .sector &,
    .sector.blank + .sector & {
        padding-top: $block-margin-vertical;

        @include breakpoint( $mobile ) {
            padding-top: $block-mobile-margin-vertical;
        }

        @include breakpoint( $mobile-large ) {
            padding-top: $block-mobile-large-margin-vertical;
        }
    }

    // Resets block's margin
    .sector .layout-rebase & {
        padding-top: $block-margin-vertical;

        @include breakpoint( $mobile ) {
            padding-top: $block-mobile-margin-vertical;
        }

        @include breakpoint( $mobile-large ) {
            padding-top: $block-mobile-large-margin-vertical;
        }
    }

    // 1B. ... and all block-containers
    .sector .block-container &:not(:first-child) { padding-top: 0; }
    .block + .block-container &:first-child { padding-top: 0; }
    .block + .block-container.two-col-layout &:last-child { padding-top: 0; }


    // 2) Responsiveness
    @include breakpoint( $mobile ) {
        padding: $block-mobile-margin-vertical $block-mobile-margin-horizontal;
    }

    @include breakpoint( $mobile-large ) {
        padding: $block-mobile-large-margin-vertical $block-mobile-large-margin-horizontal;
    }

    &.no-bg { background: inherit; } // Eliminates background
}


// Makes content aligned to the center if the width of the
// viewport surpasses $base-width.
.centraliser {
    @include centralise;
}

/* Two-column grid layout. */
.sector .two-col-layout {

    // Outter container
    //TODO: Refactor and turn into new grid
    &.block-container { width: 100%; }

    @include breakpoint( $desktop-and-bigger ) {
        display: flex;
        align-items: stretch;
    }

    // Column; makes two cols - 65% and 35% width
    .block {
        // Right column
        &:last-child { padding-top: 0; }

        &.btns-holder {
            text-align: center;

            ul,
            ol {
                text-align: left;
            }
        }

        @include breakpoint( $desktop-and-bigger ) {
            // Left column
            &:first-child {
                @include make-table-column( $two-col-layout-left-ratio );
            }

            // Right column
            &:last-child {
                @include make-table-column( $two-col-layout-right-ratio );
                padding-top: $block-margin-vertical;

                @include breakpoint( $mobile ) {
                    padding-top: $block-mobile-margin-vertical;
                }

                @include breakpoint( $mobile-large ) {
                    padding-top: $block-mobile-large-margin-vertical;
                }
            }

            &.btns-holder {
                display: flex;
                justify-content: flex-end;
                align-items: center;
                text-align: right;
                @include make-table-column( $two-col-layout-right-ratio );

                .btn {
                    text-align: center;
                    margin-top: 0;
                    margin-bottom: 0;
                }
            }
        }

        &.stretch { width: 100%; }
    }

    &.swap-columns {

        // Swap column blocks - 35% left and 65% right
        .block {
            @include breakpoint( $desktop-and-bigger ) {

                // Left column
                &:first-child {
                    @include make-table-column( $two-col-layout-right-ratio );
                }

                // Right column
                &:last-child {
                    @include make-table-column( $two-col-layout-left-ratio );
                }
            }
        }
    }

    // Adds line separators to divide blocks
    &.separated {
        .block {

            // Right column
            &:last-child {
                padding-top: $block-margin-vertical;
                border-left: none;
                border-top: $delim-border;

                @include breakpoint( $mobile ) {
                    padding-top: $block-mobile-margin-vertical;
                }

                @include breakpoint( $mobile-large ) {
                    padding-top: $block-mobile-large-margin-vertical;
                }
            }

            @include breakpoint( $desktop-and-bigger) {
                &:last-child {
                    border-left: $delim-border;
                    border-top: none;
                }
            }

            &.stretch { border-left: 0; }
        }
    }
}





/* ===== SUB-BLOCKS ========================================================= */


/**
* A block with children that are placed next to each other
* into flexible columns.
*/
.flexi-columns {
    display: flex;
    flex-wrap: nowrap;

    //.column{}

    @include breakpoint( $mobile-large-and-smaller ) {
        display: block;
    }

    // Two columns in a single row
    &.two-columns {
        .column {
            // 1st column
            &:first-child {
                width: 100% * (1 - $two-col-layout-right-ratio );
                flex: 1 1 auto;
            }

            // 2nd column
            &:last-child:not(:first-child) {
                @include breakpoint( $tablet-and-bigger ) {
                    width: 100% * $two-col-layout-right-ratio;
                    margin-left: 2.5em;
                }
            }
        }

        .btns-holder {
            a {
                margin-left: 0;
                margin-right: 0;
            }

            @include breakpoint( $mobile-large-and-smaller ) {
                text-align: center;
                margin-top: 1.5em;
            }
        }
    }
}


/**
* Grid with blocks that can flexibly stretched and
* floated based on their content dynamic.
*/
.flexi-grid {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
}

    .flexi-block {
        margin-bottom: 1em;
        margin-right: 8%;
        width: auto;

        &:last-child { margin-bottom: 0; }

        &.stretch {
            width: 100%;
            margin-right: 0;
        }
    }

